# CBBpy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  index.rst  pyproject.toml  setup.py
.github/workflows/: pytest.yml
CBBpy/: scrape.py
cbbpy/: CBBpy.py  MensScraper.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py  index.rst
src/CBBpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cbbpy/: cbbpy_utils.py  mens_scraper.py  womens_scraper.py
src/cbbpy/tests/: test_scraper.py
src/cbbpy/utils/: cbbpy_utils.py
src/data/: womens_team_map.csv
src/utils/: cbbpy_utils.py  mens_team_map.csv  womens_team_map.csv
tests/: test_scraper.py
tests/expected_data/: mens_conference_boxscore.csv  mens_conference_info.csv  mens_conference_schedule.csv  mens_game_boxscore.csv  mens_game_boxscore_400498476.csv  mens_game_boxscore_400517877.csv  mens_game_boxscore_400843495.csv  mens_game_boxscore_400871140.csv  mens_game_boxscore_400919646.csv  mens_game_boxscore_400989020.csv  mens_game_boxscore_400990907.csv  mens_game_boxscore_401082698.csv  mens_game_boxscore_401581583.csv  mens_game_boxscore_401597830.csv  mens_game_boxscore_range.csv  mens_game_info.csv  mens_game_info_400498476.csv  mens_game_info_400517877.csv  mens_game_info_400843495.csv  mens_game_info_400871140.csv  mens_game_info_400919646.csv  mens_game_info_400989020.csv  mens_game_info_400990907.csv  mens_game_info_401082698.csv  mens_game_info_401581583.csv  mens_game_info_401597830.csv  mens_game_info_range.csv  mens_game_pbp.csv  mens_game_pbp_400498476.csv  mens_game_pbp_400517877.csv  mens_game_pbp_400843495.csv  mens_game_pbp_400871140.csv  mens_game_pbp_400919646.csv  mens_game_pbp_400989020.csv  mens_game_pbp_400990907.csv  mens_game_pbp_401082698.csv  mens_game_pbp_401581583.csv  mens_game_pbp_401597830.csv  mens_players.csv  mens_schedule.csv  (+41 more)
