# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CBBpy"
version = "2.0.2"
description = 'A Python-based web scraper for NCAA basketball.'
readme = "README.md"
authors = [{ name = "Daniel Cowan", email = "dnlcowan37@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = [
  "college", 
  "basketball", 
  "scraper", 
  "scraping",
  "web scraper",
  "data",
  "espn",
  "analysis",
  "science",
  "analytics",
  "cbb",
  "cbbpy",
  "ncaa",
  "ncaam",
  "ncaaw",
]
dependencies = [
  'pandas>=1.4.2',
  'numpy>=1.22.3',
  'python-dateutil>=2.8.2',
  'pytz>=2022.1',
  'tqdm>=4.63.0',
  'lxml>=4.9.0',
  'joblib>=1.2.0',
  'beautifulsoup4>=4.11.0',
  'requests>=2.27.0',
]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
version = {attr = "cbbpy.__version__"}

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/dcstats/CBBpy/"

# [project.scripts]
# realpython = "reader.__main__:main"
