# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CBBpy"
dynamic = ["version"]
description = 'A Python-based web scraper for NCAA basketball.'
readme = "README.md"
authors = [{ name = "Daniel Cowan"}, {email = "dnlcowan37@gmail.com"}]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
  "college", 
  "basketball", 
  "scraper", 
  "scraping",
  "web scraper",
  "data",
  "espn",
  "analysis",
  "science",
  "analytics",
  "cbb",
  "cbbpy",
  "ncaa",
  "ncaam",
  "ncaaw",
]
dependencies = [
  'pandas>=2.0.0',
  'numpy>=2.0.0',
  'python-dateutil>=2.4.0',
  'pytz>=2022.1',
  'tqdm>=4.63.0',
  'lxml>=4.9.0',
  'joblib>=1.0.0',
  'beautifulsoup4>=4.11.0',
  'requests>=2.27.0',
  'rapidfuzz>=3.9.0',
  'platformdirs>=4.0.0',
]
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/dcstats/CBBpy/"
issues = "https://github.com/dcstats/CBBpy/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cbbpy", "cbbpy.utils"]

[tool.setuptools.package-data]
"cbbpy.utils" = ["*.csv"]

[tool.setuptools.dynamic]
version = {attr = "cbbpy.__version__"}
